<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title_LC"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/category_LC"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:id="@+id/rating_LC"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:id="@+id/review_LC"
        />





</LinearLayout>